--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: sans-serif;
-    background: burlywood;
+    background: #deb887;
     margin: 0px;
     padding: 0px;
 }
@@ -13,7 +13,7 @@ body{
     position: fixed;
     width: 100%;
     height: 40px;
-    background: burlywood;
+    background: #deb887;
 }
 
 nav {
@@ -49,10 +49,11 @@ nav li :hover {
     background: #f58220;
 }
 #menu ul {
-     -webkit-box-shadow: 0 8px 6px -6px #999;
+    -webkit-box-shadow: 0 8px 6px -6px #999;
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 8px 6px -6px #999;
 }
+
 #main-logo img {
     float: left;
     width: 150px;
@@ -80,14 +81,14 @@ nav li :hover {
     margin-top: -10px;
 }
 
-.pre-image {
+#image img:first-child {
     width: 69%;
     float: right;
     margin-top: 39px;
     opacity: .2;
 }
 
-.main-image {
+#image img {
     width: 69%;
     float: right;
     margin-left: 0px;
@@ -108,22 +109,22 @@ nav li :hover {
     letter-spacing: 8px;
     border-bottom: 2px solid #f58220;
 }
-.image-about {
+.about-image img {
     width: 330px;
     float: left;
     margin-right: 100px;
-    margin-left: 40px;
+    margin-left: 75px;
     margin-top: 10px;
-    box-shadow: 5px 5px 10px grey;
+    box-shadow: 5px 5px 10px #808080;
     border: 2px solid #f58220;
 }
-.p {
+
+#about-info h3 {
     margin-top: 50px;
     color: #f58220;
     font-size: 30px;
     font-weight: normal;
-/*    text-align: center;*/
-    margin-left: 580px;
+    margin-left: 610px;
     letter-spacing: 3px;
 }
 .p1 .p2 {
@@ -131,7 +132,7 @@ nav li :hover {
 }
 .p1 {
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: normal;
     margin-right: 100px;
     line-height: 1.4;
@@ -140,11 +141,20 @@ nav li :hover {
 .p2 {
     text-indent: 20px;
     text-align: justify;
-        font-size: 16px; 
+    font-size: 17px; 
     margin-right: 100px;
     line-height: 1.4;
 }
-
+#about-info h2 {
+    margin-top: 40px;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: normal;
+    margin-left: 610px;
+    letter-spacing: 3px;
+    margin-left: -60px;
+    line-height: 1.5;
+}
 
 #products {
     display: block;
@@ -155,7 +165,7 @@ nav li :hover {
     margin: 0 auto;
     text-align: center;
 }
-.tesakani {
+.products-title {
     color: black;
     text-decoration: none;
     font-weight: normal;
@@ -190,7 +200,7 @@ nav li :hover {
     margin-bottom: 0px;
 }
 
-.contact-bar {
+.contact-title {
     color: black;
     text-decoration: none;
     font-weight: normal;
@@ -201,37 +211,6 @@ nav li :hover {
     border-bottom: 2px solid #f58220;
 }
 
- #form {
-    width: 500px;
-    padding: 10px;
-    margin: 0 auto;
-    box-shadow: 0 1px 5px 2px;
-    border-radius: 5px;
-}
-.page-heading {
-    text-align: center;
-    margin-bottom: 20px;
-}
-#form input {
-    width: 100%;
-    background: #4e505d24;
-    border-radius: 5px;
-    height: 20px;
-}
-#form #message {
-    width: 100%;
-    background: #4e505d24;
-    border-radius: 5px;  
-}
-
-#form #submit {
-    height: 30px;
-    background: #3b7687;
-}
-.contact {
-    display: block;
-    margin-bottom: 100px;
-}
 .social-media img {
     display: inline-block;
     margin: 0 auto;
@@ -244,15 +223,16 @@ nav li :hover {
 
 #contact {
     background: #63000d;
+    padding-top: 5px;
 }
-.e-mail {
+#contact h1:first-child {
     text-align: center;
     padding-top: 15px;
     color: white;
     font-weight: normal;
     margin-bottom: -10;
 }
-.tel {
+#contact h4 {
     text-align: center;
     color: white;
     font-weight: normal;
@@ -271,37 +251,3 @@ footer a{
     text-decoration: none;
     color: #262626;
 }
-
-
-
-
-.to-top{
-	color:white;
-	padding-top:12px;
-	display:inline-block;/* or block */
-	position:fixed;
-    margin-left: 850px;
-    margin-top: 550px;
-	border-color:white;
-	text-decoration:none;
-}
-.to-top:before{
-	content:'▲';
-	font-size:15px;
-	position:absolute;
-	border:solid 2px white;
-	border-radius:50%;
-	width:25px;
-	height:25px;
-	border-color:inherit;
-	transition:transform .5s ease-in;
-    text-align: center;
-}
-.to-top:hover{
-	color:pink;
-	border-color:pink;
-}
-/*
-.to-top:hover:before{
-	transform: rotate(360deg);
-}*/
